# reflexion-sample

./: pyproject.toml
src/: reflexion-1.py
